# QuizGame

./: .gitignore  CMakeLists.txt  Common.lib  imgui.ini  toolchain_linux.cmake
Client/: CMakeLists.txt
Client/src/: App.cpp  Client.cpp  Client.h  QuizBlueprint.h  Renderer.cpp  Renderer.h  UserInterface.cpp  UserInterface.h
Common/: CMakeLists.txt
Common/src/: PacketTypes.cpp  PacketTypes.h  Packets.pb.cc  Packets.pb.h  Packets.proto  PlayerData.h  QuizBlueprint.h  Serializer.cpp  Serializer.h  UserInfo.h
Server/: CMakeLists.txt
Server/src/: App.cpp  CsvHandler.h  FilesHandler.h  PlayerInfo.h  Quiz.cpp  Quiz.h  QuizCards.h  QuizUtils.h  ScoreSystem.cpp  ScoreSystem.h  Server.cpp  Server.h  Shuffles.h
ServerCpp/: CMakeLists.txt
ServerCpp/src/: Server.cpp
quizzes/: other_test_quiz.csv  test_quiz.csv
